@@ -3684,7 +3684,7 @@ static void register_hooks(apr_pool_t *p)
                               AP_FTYPE_HTTP_HEADER);
     ap_register_output_filter("CORE", core_output_filter, AP_FTYPE_NETWORK);
     ap_register_output_filter("SUBREQ_CORE", ap_sub_req_output_filter, 
-                              AP_FTYPE_CONTENT);
+                              AP_FTYPE_HTTP_HEADER);
     ap_old_write_func = ap_register_output_filter("OLD_WRITE", 
                                    ap_old_write_filter, AP_FTYPE_CONTENT - 10);
 }
